application/nginx/nginx-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx-route
  labels:
    app: nginx-r
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: nginx-service
